<resources>
    <string name="app_name">RSA Tool</string>
    <string name="action_settings">Settings</string>
    
    <string name="main_title_selector_public">Public key</string>
    <string name="main_title_selector_private">Private key</string>
    <string name="main_title_input_text_source">Content before encryption/decryption</string>
    <string name="main_button_encrypt">Encrypt</string>
    <string name="main_button_decrypt">Decrypt</string>
    <string name="main_title_input_text_target">Content after encryption/decryption</string>

    <!-- first run dialog -->
    <string name="dialog_first_run_title">Instruction</string>
    <string name="dialog_first_run_content">
        Thanks for using RSA TOOL! Using this tool you can encrypt content by RSA.
        \n\nIf you are using this tool first time, please click menu->Add->Generate key pair to generate your public and private key. You will own your private key, and the public key can be sent to others.
        \n\nTo send encrypted message to someone, you need to add their public key first. Then use their public key encrypt message.
        \n\nTo receive encrypted message from others, you need to give your public key to someone who will send you. The message encrypted by your public key can only be decrypted using your private key.
    </string>
    <string name="dialog_first_run_checkbox">Don\'t show this again</string>
    <string name="dialog_first_run_button">Got it</string>

    <!-- encrypt and decrypt message -->
    <string name="encrypt_string_no_public_key">Please add public key first</string>
    <string name="encrypt_string_null_result">Failed to encrypt</string>

    <string name="decrypt_string_no_private_key">Please add private key first</string>
    <string name="decrypt_string_null_result">Failed to decrypt</string>
    
    <string name="floating_action_button_nothing_to_copy">Nothing can be used to copy</string>
    <string name="floating_action_button_copy_success">Successfully copied</string>

    <!-- add key public dialog-->
    <string name="dialog_add_key_public_title">Add public key</string>
    <string name="dialog_add_key_public_description">Add someone\'s public key</string>
    <string name="dialog_add_key_public_name">Nickname</string>
    <string name="dialog_add_key_public_key">Public key</string>
    <string name="dialog_add_key_public_button_confirm">Add</string>
    <string name="dialog_add_key_public_button_cancel">Close</string>
    <string name="dialog_add_key_public_fail">Please fill all the blanks</string>
    <string name="dialog_add_key_public_exists">Nickname already exists</string>
    <string name="dialog_add_key_public_success">Successfully add</string>

    <!-- add key private dialog-->
    <string name="dialog_add_key_private_title">Add private key</string>
    <string name="dialog_add_key_private_description">Add your private key</string>
    <string name="dialog_add_key_private_name">Nickname</string>
    <string name="dialog_add_key_private_key">Private key</string>
    <string name="dialog_add_key_private_with_public">Generate private key\'s public key and add it</string>
    <string name="dialog_add_key_private_wrong_key">Failed to generate public key. Please check your private key</string>
    <string name="dialog_add_key_private_button_confirm">Add</string>
    <string name="dialog_add_key_private_button_cancel">Close</string>
    <string name="dialog_add_key_private_fail">Please fill all the blanks</string>
    <string name="dialog_add_key_private_exists">Nickname already exists</string>
    <string name="dialog_add_key_private_success">Successfully add</string>

    <!-- create key dialog -->
    <string name="dialog_create_key_title">Generate key pair</string>
    <string name="dialog_create_key_description">Generate a new key pair</string>
    <string name="dialog_create_key_name">Nickname</string>
    <string name="dialog_create_key_button_create">Generate</string>
    <string name="dialog_create_key_button_create_description">Click generate button to generate your key pair.</string>
    <string name="dialog_create_key_key_public">Public key</string>
    <string name="dialog_create_key_key_private">Private key</string>
    <string name="dialog_create_key_button_confirm">Add</string>
    <string name="dialog_create_key_button_cancel">Close</string>
    <string name="dialog_create_key_fail">Please fill the nickname and generate the key pair</string>
    <string name="dialog_create_key_exists">Nickname already exists</string>
    <string name="dialog_create_key_success">Successfully add</string>


    <!-- menu items -->
    <string name="menu_add_items">Add</string>
    <string name="menu_add_key_public">Add public key</string>
    <string name="menu_add_key_private">Add private key</string>
    <string name="menu_create_key">Generate key pair</string>
    <string name="menu_help_dialog">Help</string>
</resources>
