<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView13"
        style="@style/DialogTheme.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_create_key_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        style="@style/DialogTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_create_key_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <EditText
        android:id="@+id/dialogCreateKeyEditText1"
        style="@style/DialogTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <Button
        android:id="@+id/dialogCreateKeyButton1"
        style="@style/DialogTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_create_key_button_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView15"
        style="@style/DialogTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_create_key_button_create_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogCreateKeyEditText1" />

    <EditText
        android:id="@+id/dialogCreateKeyEditText2"
        style="@style/DialogTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:lines="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView16"
        style="@style/DialogTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_create_key_key_private"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogCreateKeyButton1" />

    <TextView
        android:id="@+id/textView17"
        style="@style/DialogTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_create_key_key_public"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogCreateKeyEditText2" />

    <EditText
        android:id="@+id/dialogCreateKeyEditText3"
        style="@style/DialogTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:lines="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />
</androidx.constraintlayout.widget.ConstraintLayout>